[tool.poetry]
name = "luolageneraattori"
version = "0.1.0"
description = ""
authors = ["Nuutti Kekkonen <nuutti.kekkonen@saunalahti.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.6.1"
invoke = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
coverage = "^7.10.6"
pylint = "^3.3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
